--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ h1 {
 
 .number {
   /* background: var(--primary-color); */
-  border-radius: 30px 30px 100px 30px;
+  border-radius: 50%;
   border: 3px solid var(--primary-color);
   color: #000;
   font-size: 6rem;
@@ -101,7 +101,7 @@ h1 {
 .guess {
   background: none;
   border: 2px solid black;
-  border-radius: 30px 30px 100px 30px;
+  border-radius: 15px 15px 15px 15px;
   font-family: inherit;
   color: black;
   font-size: 5rem;
@@ -184,8 +184,8 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  height: 300%;
+  background-color: rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(3px);
   z-index: 5;
 }
@@ -205,27 +205,41 @@ footer {
   padding: 2em;
 }
 
-@media screen {
-  @media screen and (min-width: 390px) {
-    main {
-      padding-left: 1em;
-      padding-right: 1em;
-    }
+@media screen and (min-width: 390px) {
+  main {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
 
-    .btn {
-      font-size: 1.3rem;
-      padding: 1.5rem 2rem;
-    }
-    .again {
-      left: 4.9rem;
-    }
-    .between {
-      right: 4.9rem;
-    }
-    .guess {
-      padding: 1.5rem;
-      width: 15rem;
-      font-size: 3rem;
-    }
+  .btn {
+    font-size: 1.3rem;
+    padding: 1.5rem 2rem;
+  }
+
+  .check {
+    font-size: 1.5rem;
+    padding: 1.9rem 5rem;
+  }
+  .again {
+    left: 4.9rem;
+  }
+  .between {
+    right: 4.9rem;
+  }
+  .guess {
+    padding: 1.5rem;
+    width: 15rem;
+    font-size: 3rem;
+  }
+}
+
+@media screen and (min-width: 730px) {
+  main {
+    margin: auto;
+  }
+  .btn {
+    font-size: 1.7rem;
+    padding: 1.5rem 3rem;
+    border-radius: 7px;
   }
 }
